# Final-Assignment

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
config/: domain.yaml  intent_utterances.json  keyword_signals.json
docs/: TEAM_GUIDE.md
knowledge/: README.md
knowledge/business/: scope.md
knowledge/examples/: use_cases.md
knowledge/metrics/: abandon_cus.md  abandon_sys.md  agent_metrics.md  sla20.md
knowledge/schema/: abandoned_call.md  agent.md  call_log.md  distribution_call.md  relationships.md  request_code.md
prompts/: data_agent_system.md
scripts/: __init__.py  ingest_kb.py  init_db.py
scripts/sql/: init.sql
src/: __init__.py  main.py
src/agents/: __init__.py  agentscope_react.py  data_agent.py  prompts.py  tools.py
src/api/: app.py  models.py  routes.py
src/core/: __init__.py  config.py  errors.py  logging.py
src/domain/: __init__.py  config.py  intent.py  response.py
src/infrastructure/: __init__.py  database.py  sql_validator.py  vector_store.py
src/infrastructure/llm/: gemini_provider.py  openai_provider.py  ports.py  (+1 more)
src/memory/: __init__.py  conversation_memory.py  conversation_store.py
src/rag/: __init__.py  embedder.py  knowledge_service.py
src/router/: bm25_classifier.py  heuristic.py  intent_router.py  language_detector.py  llm_intent_classifier.py  rules.py  tokenizer.py  utterance_store.py
src/utils/: __init__.py  formatting.py
tests/integration/: test_sql_execution.py
tests/unit/: test_config.py  test_domain_config.py  test_error_codes.py  test_sql_validator.py
(+11 files in other folders)
